Fixed spacing of right side of page

--- a/style.css
+++ b/style.css
@@ -48,12 +48,9 @@
 }
 
 .introParagraph {
-    margin-top: 12vh;
-    bottom: 40vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    margin: 12vh 10vw 0 3.5vw;
 }
 
 .formTitle {
@@ -64,7 +61,7 @@
 form {
     display: flex;
     flex-direction: column;
-    margin-left: 3vh;
+    margin-left: 3.5vw;
 
 }
 
@@ -72,10 +69,15 @@ input {
     border: none;
 }
 
+input::selection {
+    border: 1px blue;
+}
+
 
 .topLayerOfForm {
     display: flex;
     margin-top: 0.5vh;
+    margin-right: 2vh;
 }
 
 .secondLayerOfForm, .thirdLayerOfForm {
@@ -86,6 +88,10 @@ input {
 .firstName, .lastName, .email, .phoneNumber, .password, .confirmPassword {
     display: flex;
     flex-direction: column;
+}
+
+.firstName, .email, .password {
+    margin-right: 4vw;
 }
 
 
@@ -99,4 +105,6 @@ input {
     border: 25px green;
     background-color: green;
     border-radius: 25%;
+    margin-bottom: 2vh;
 }
+
